Add more info page dividing sections

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,9 +1,8 @@
 <div class="footer">
     <span>
-        <p>Copyright 2023 by Timjan Kalajdzievski</p>
+        <p>Copyright 2023 by <a href="mailto:vgtimis133@gmail.com">Timjan Kalajdzievski</a></p>
         <p>Art copyright 2023 by <a (click)="openBottomSheet()">Kevin Bannister</a></p>
-        <p>Layout and design by Jordan Watt</p>
-        <p>Cover design by <a (click)="openBottomSheet()">Kevin Bannister</a></p>
+        <p>Site by <a href="mailto:WattJordanAlex@gmail.com">Jordan Watt</a></p>
     </span>
     <div style="display: flex; align-items: center;">
         <div class="social">
