--- a/src/app/more-info/more-info.component.html
+++ b/src/app/more-info/more-info.component.html
@@ -29,7 +29,7 @@
             <img src="assets/images/artwork/SoulsD20 Cover FINAL 72dpi.png">
         </a>
     </div>
-    <div style="display: flex; flex-direction: row; margin-bottom: 100px;">
+    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 60px;">
         <div class="book-preview">
             <div class="preview">
                 <div id="previewPage1"></div>
@@ -46,21 +46,35 @@
                 </li>
             </ul>
             <h3>Customized Builds!</h3>
-            <p>21 unique trees to mix and match abilities and synergies from!
-                21 unique trees to mix and match abilities and synergies from!
-                21 unique trees to mix and match abilities and synergies from!
-            </p>
+            <p>21 unique trees to mix and match abilities and synergies from! <br><br>
+                As you gain experience through adventuring your character will gain points to invest into multiple
+                ability trees at once. Mix and match abilities from different trees to create a unique character and
+                build!</p>
         </div>
-        <!-- <div>
-            <a mat-raised-button color="primary" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf"
-                download>Download Preview</a>
-            <a mat-raised-button color="primary" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf"
-                download>Download Preview</a>
-            <a mat-raised-button color="primary" href="/assets/download/preview/Souls_D20_Rules_3.0.2_Preview.pdf"
-                download>Download Preview</a>
-        </div> -->
     </div>
-    <div style="margin-bottom: 100px;">
+
+    <div style="position: static; margin-bottom: 500px;">
+        <div class="section">
+            <div class="section-content">
+                <div class="section-blurbs">
+                    <p>Most abilities are usable with most weapon types! For example, a character that has invested into
+                        the Daggers tree to do more damage from behind, will be able to take advantage of that ability
+                        even when they are wielding a weapon other than a dagger!
+                    </p>
+                    <p>Go down the Fist and Reaper tree to create a monk like character which deals extra bleed status
+                        effect build up in exchange for draining their own blood. Or a martial artist that defends their
+                        teammates while draining their enemies.
+                    </p>
+                    <p>Try out a tanky gunslinger that defends with a shield while taking precise shots with a gun.
+                    </p>
+                </div>
+
+                <img src="assets/images/artwork/Twinblade F WEB.png">
+            </div>
+        </div>
+    </div>
+
+    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 100px;">
         <div class="book-preview">
             <div class="preview">
                 <div id="previewPage2"></div>
@@ -76,14 +90,32 @@
                     <div></div>
                 </li>
             </ul>
-            <h3>7,458,924 Spells!</h3>
-            <p>21 unique trees to mix and match abilities and synergies from!
-                21 unique trees to mix and match abilities and synergies from!
-                21 unique trees to mix and match abilities and synergies from!
+            <h3>Wide Range Of Spells!</h3>
+            <p>Explore multiple categories of magic and spellcasting to build a caster or spellblade of your own!
+                Sorceries, Miracles, Pyromancy, Hexes, and even Spirit Summoning. Each with multiple sub categories and
+                ability trees to progress down!
             </p>
         </div>
     </div>
-    <div>
+
+    <div style="position: static; margin-bottom: 500px;">
+        <div class="section">
+            <div class="section-content">
+                <div class="section-blurbs">
+                    <p>Combine Hammers and Miracles to make a character that wields cold blue lightning to freeze their
+                        enemies and smash them into the ground!
+                    </p>
+                    <p>Build a dragon pyromancer that can burn others with just their gaze, and from the sorcery tree,
+                        gaze into their minds with just a touch.
+                    </p>
+                </div>
+
+                <img src="assets/images/artwork/Hex F WEB.png">
+            </div>
+        </div>
+    </div>
+
+    <div style="display: flex; flex-direction: column; align-items: center; margin-bottom: 100px;">
         <div class="book-preview">
             <div class="preview">
                 <div id="previewPage3"></div>
@@ -100,34 +132,28 @@
                 </li>
             </ul>
             <h3>Master Weapon Skills!</h3>
-            <p>21 unique trees to mix and match abilities and synergies from!
-                21 unique trees to mix and match abilities and synergies from!
-                21 unique trees to mix and match abilities and synergies from!
+            <p>Dont let spellcasters have all the fun! Learn and take advantage of dozens of weapon skills which you can
+                mix and match to use with a wide variety of weapons.
             </p>
         </div>
     </div>
-    <!-- <div class="cards">
-        <img src="assets/images/artwork/WPNProfs_Page1.png">
-        <div class="lefty">
-            <h3>Customized Builds</h3>
-            <p>21 unique trees to mix and match abilities and synergies from!</p>
+
+    <div style="position: static; margin-bottom: 500px;">
+        <div class="section">
+            <div class="section-content">
+                <div class="section-blurbs">
+                    <p>Feel the power and utility of creating blades of air when you attack, pulling in enemies with the
+                        power of gravity, vaulting through the air to close gaps, and summoning a phantom of yourself to
+                        attack an unreachable target. Just to name a few!
+                    </p>
+                    <p>Augment your attacks with area of effect to more easily hit multiple targets. Even inspire and
+                        buff your allies with weapon skills!
+                    </p>
+                </div>
+
+                <img src="assets/images/artwork/Spear F WEB.png">
+            </div>
         </div>
     </div>
-    <div class="cards">
-        <div class="righty">
-            <h3>Exactly 7,582,433 spells to choose from!</h3>
-            <p>Wide range of spells from different types of magic to enhance both combat & roleplaying!
-                Spells easily synergize with feats allowing for unique and tactical combinations, as well
-                each spell comes with versatility through "charged spells"!
-            </p>
-        </div>
-        <img src="assets/images/artwork/Spells_Page1.png">
-    </div>
-    <div class="cards">
-        <img src="assets/images/artwork/WPNSkills_Page1.png">
-        <div class="lefty">
-            <h3>Learn combat skills from weapons!</h3>
-            <p>Why let spellcasters have all the fun? Fuck em. Create your own spell list but with skills?</p>
-        </div>
-    </div> -->
+
 </div>
