--- a/src/app/play-info/play-info.component.html
+++ b/src/app/play-info/play-info.component.html
@@ -4,7 +4,7 @@
         or contact us directly at <a target="_blank" href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a>.</p>
     <div class="social">
         <a mat-icon-button color="primary" target="_blank"
-            href="https://discord.com/channels/567897304908955649/1021927716750098482">
+            href="https://discord.gg/UnEKqTx">
             <i class="fa-brands fa-discord"></i>
         </a>
         <a mat-icon-button color="primary" target="_blank" href="mailto:vgtimis133@gmail.com">
