Add landing page rework

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="title">
-    <h1 class="pageHeader">Contact us at <a href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a>
+    <h1>Contact us at <a style="text-decoration: underline;" href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a>
         for any questions and inquiries.
     </h1>
     <div class="social">
