--- a/src/app/play-info/play-info.component.html
+++ b/src/app/play-info/play-info.component.html
@@ -3,8 +3,7 @@
     <p>Join the discord community to discuss the system and currently running games,
         or contact us directly at <a target="_blank" href="mailto:vgtimis133@gmail.com">vgtimis133@gmail.com</a>.</p>
     <div class="social">
-        <a mat-icon-button color="primary" target="_blank"
-            href="https://discord.gg/UnEKqTx">
+        <a mat-icon-button color="primary" target="_blank" href="https://discord.gg/UnEKqTx">
             <i class="fa-brands fa-discord"></i>
         </a>
         <a mat-icon-button color="primary" target="_blank" href="mailto:vgtimis133@gmail.com">
@@ -13,9 +12,16 @@
     </div>
 </div>
 <div class="content">
-    <h2>Currently running campaigns:</h2>
-    <p>Play alongside multiple other groups in a fully realized and living world made specifically
-        by the author of Souls d20</p>
+    <div style="position: static; margin-bottom: 200px;">
+        <div class="section">
+            <div class="section-content">
+                <h2>Currently running campaigns:</h2>
+                <p>Play alongside multiple other groups in a fully realized and living world made specifically
+                    by the author of Souls d20</p>
+            </div>
+        </div>
+    </div>
+
     <mat-tab-group>
         <mat-tab label="Frozen Warriors">
             <div class="campaign">
